--- a/gaf/ant/build.xml
+++ b/gaf/ant/build.xml
@@ -1,35 +1,40 @@
 <project name="GAF" basedir="../" default="build">
 
-  <property name="FLEX_HOME" location="/tools/flex_sdk_4.6"/>
-  
+  <property name="sdk.dir" location="d:\AirSDK"/>
+
   <property name="deploy.dir" location="bin" />
   <property name="src.dir" location="src" />
   <property name="lib.dir" location="lib" />
   <property name="doc.dir" location="doc" />
-    
-  <taskdef resource="flexTasks.tasks" classpath="${FLEX_HOME}/ant/lib/flexTasks.jar" />
-  
+
+  <taskdef resource="flexTasks.tasks" classpath="${sdk.dir}/ant/lib/flexTasks.jar" />
+  <property name="FLEX_HOME" value="${sdk.dir}" />
+
   <target name="build">
     <compc output="${deploy.dir}/gaf.swc">
       <include-sources dir="${src.dir}" includes="*" />
       <include-libraries file="${lib.dir}/FZip.swc" />
       <external-library-path file="${lib.dir}/starling.swc" />
-      <external-library-path dir="${FLEX_HOME}/frameworks/libs/player/" includes="*" />
+      <external-library-path file="${lib.dir}/feathers.swc" />
+      <external-library-path dir="${sdk.dir}/frameworks/libs/player/" includes="*" />
     </compc>
-  </target>  
-	
-  <target name="doc" depends="clean"> 
-  	<asdoc output="${doc.dir}" lenient="true" failonerror="true"> 
-        <doc-sources path-element="${src.dir}"/>
-  		<compiler.source-path path-element="${FLEX_HOME}/frameworks/projects/framework/src"/> 
-  		<compiler.library-path file="${lib.dir}/starling.swc"/>
-  		<compiler.library-path file="${lib.dir}/FZip.swc"/>
-        </asdoc> 
-    </target>	
-	
-	<target name="clean"> 
-	    <delete includeEmptyDirs="true"> 
-	         <fileset dir="${doc.dir}" includes="**/*"/> 
-	    </delete> 
-	</target> 
+  </target>
+
+  <target name="doc" depends="clean">
+  	<exec executable="${sdk.dir}/bin/asdoc.exe">
+  	    <arg value="-doc-sources"/>
+  		<arg value="${src.dir}"/>
+  		<arg value="-library-path"/>
+  		<arg value="${lib.dir}"/>
+  		<arg value="-output"/>
+  		<arg value="${doc.dir}"/>
+  		<arg value="-lenient"/>
+  	</exec>
+  </target>
+
+  <target name="clean">
+    <delete includeEmptyDirs="true">
+	   <fileset dir="${doc.dir}" includes="**/*"/>
+	</delete>
+  </target>
 </project>
