--- a/gaf/ant/build.xml
+++ b/gaf/ant/build.xml
@@ -33,7 +33,7 @@
     </target>
 
     <target name="clean">
-        <delete includeEmptyDirs="true">
+        <delete includeEmptyDirs="true" failonerror="false">
             <fileset dir="${doc.dir}" includes="**/*"/>
         </delete>
     </target>
